//! Log Processor
//!
//! Handles log processing, analytics, and security event correlation.

use crate::{grpc_server::proto::*, DatabaseConfig, RedisConfig};
use anyhow::Result;
use tracing::{error, info};

/// Log Processor handles all log processing and analytics operations
pub struct LogProcessor {
    database_config: DatabaseConfig,
    redis_config: RedisConfig,
}

impl LogProcessor {
    pub async fn new(database_config: &DatabaseConfig, redis_config: &RedisConfig) -> Result<Self> {
        info!("Initializing Log Processor");
        
        Ok(Self {
            database_config: database_config.clone(),
            redis_config: redis_config.clone(),
        })
    }

    pub async fn process_log_entry(&self, log_entry: LogEntry) -> Result<()> {
        info!("Processing log entry from gateway: {}", log_entry.gateway_id);
        
        // TODO: Implement actual log processing
        // - Store in database
        // - Update metrics
        // - Trigger security analysis if security log
        // - Update real-time analytics
        
        match log_entry.log_type() {
            LogType::Security => {
                self.process_security_log(&log_entry).await?;
            }
            LogType::Performance => {
                self.process_performance_log(&log_entry).await?;
            }
            LogType::Access => {
                self.process_access_log(&log_entry).await?;
            }
            _ => {
                info!("Processing general log entry");
            }
        }
        
        Ok(())
    }

    pub async fn get_metrics(&self, request: &MetricsRequest) -> Result<Vec<MetricData>> {
        info!("Getting metrics for gateway: {}", request.gateway_id);
        
        // TODO: Implement actual metrics retrieval from database/cache
        let metrics = vec![
            MetricData {
                name: "requests_total".to_string(),
                r#type: "counter".to_string(),
                value: 1000.0,
                labels: std::collections::HashMap::from([
                    ("gateway_id".to_string(), request.gateway_id.clone()),
                    ("status".to_string(), "success".to_string()),
                ]),
                timestamp: chrono::Utc::now().timestamp(),
            },
            MetricData {
                name: "response_time_ms".to_string(),
                r#type: "histogram".to_string(),
                value: 25.5,
                labels: std::collections::HashMap::from([
                    ("gateway_id".to_string(), request.gateway_id.clone()),
                ]),
                timestamp: chrono::Utc::now().timestamp(),
            },
        ];
        
        Ok(metrics)
    }

    pub async fn start_background_processing(&self) -> Result<()> {
        info!("Starting log processing background tasks");
        
        // TODO: Implement background processing tasks
        // - Log aggregation
        // - Analytics computation
        // - Security event correlation
        // - Report generation
        
        let mut interval = tokio::time::interval(tokio::time::Duration::from_secs(60));
        
        loop {
            interval.tick().await;
            
            if let Err(e) = self.process_analytics().await {
                error!("Analytics processing error: {}", e);
            }
            
            if let Err(e) = self.process_security_correlation().await {
                error!("Security correlation processing error: {}", e);
            }
        }
    }

    async fn process_security_log(&self, log_entry: &LogEntry) -> Result<()> {
        info!("Processing security log entry");
        
        if let Some(security_data) = &log_entry.security_data {
            // TODO: Implement security log processing
            // - Store security event
            // - Update threat intelligence
            // - Trigger real-time alerts if needed
            // - Update security metrics
            
            if security_data.severity == "critical" {
                info!("Critical security event detected from {}", security_data.client_ip);
                // TODO: Trigger immediate response
            }
        }
        
        Ok(())
    }

    async fn process_performance_log(&self, log_entry: &LogEntry) -> Result<()> {
        info!("Processing performance log entry");
        
        if let Some(performance_data) = &log_entry.performance_data {
            // TODO: Implement performance log processing
            // - Store performance metrics
            // - Update performance dashboards
            // - Trigger alerts on performance degradation
            
            if performance_data.execution_time_ms > 1000 {
                info!("Slow operation detected: {} took {}ms", 
                      performance_data.operation, performance_data.execution_time_ms);
            }
        }
        
        Ok(())
    }

    async fn process_access_log(&self, log_entry: &LogEntry) -> Result<()> {
        info!("Processing access log entry");
        
        if let Some(request_data) = &log_entry.request_data {
            // TODO: Implement access log processing
            // - Store request metrics
            // - Update traffic analytics
            // - Track usage patterns
            
            if request_data.status_code >= 400 {
                info!("Error response detected: {} {}", request_data.status_code, request_data.uri);
            }
        }
        
        Ok(())
    }

    async fn process_analytics(&self) -> Result<()> {
        info!("Processing analytics");
        
        // TODO: Implement analytics processing
        // - Aggregate metrics
        // - Generate reports
        // - Update dashboards
        // - Compute trends
        
        Ok(())
    }

    async fn process_security_correlation(&self) -> Result<()> {
        info!("Processing security event correlation");
        
        // TODO: Implement security correlation
        // - Analyze attack patterns
        // - Detect coordinated attacks
        // - Generate threat intelligence
        // - Update WAF rules automatically
        
        Ok(())
    }
}